<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference app:key="check_for_updates"
            app:title="@string/check_for_updates_title"
            app:summary="@string/check_for_updates_summary"
            app:iconSpaceReserved="false" />

    <PreferenceCategory app:title="@string/settings_header"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false">

        <ListPreference app:key="channel"
                app:title="@string/channel_title"
                app:iconSpaceReserved="false"
                app:useSimpleSummaryProvider="true"
                app:entries="@array/channel_entries"
                app:entryValues="@array/channel_values"
                app:defaultValue="@string/channel_default" />

        <SwitchPreferenceCompat app:key="use_security_preview_channel"
                app:persistent="false"
                app:title="@string/use_security_preview_channel_title"
                app:summaryOn="@string/use_security_preview_channel_summary_on"
                app:summaryOff="@string/use_security_preview_channel_summary_off"
                app:iconSpaceReserved="false" />

        <ListPreference app:key="network_type"
                app:persistent="false"
                app:title="@string/network_type_title"
                app:iconSpaceReserved="false"
                app:useSimpleSummaryProvider="true"
                app:entries="@array/network_type_entries"
                app:entryValues="@array/network_type_values"
                app:defaultValue="@string/network_type_default" />

        <SwitchPreferenceCompat app:key="battery_not_low"
                app:title="@string/battery_not_low_title"
                app:iconSpaceReserved="false"
                app:summaryOn="@string/battery_not_low_summary_on"
                app:summaryOff="@string/battery_not_low_summary_off"
                app:defaultValue="@string/battery_not_low_default" />

        <SwitchPreferenceCompat app:key="requires_charging"
                app:title="@string/requires_charging_title"
                app:iconSpaceReserved="false"
                app:summaryOn="@string/requires_charging_summary_on"
                app:summaryOff="@string/requires_charging_summary_off"
                app:defaultValue="@string/requires_charging_default" />

        <SwitchPreferenceCompat app:key="idle_reboot"
                app:title="@string/idle_reboot_title"
                app:iconSpaceReserved="false"
                app:summaryOn="@string/idle_reboot_summary_on"
                app:summaryOff="@string/idle_reboot_summary_off"
                app:defaultValue="@string/idle_reboot_default" />

        <Preference app:key="notification_settings"
                app:title="@string/notification_settings_title"
                app:iconSpaceReserved="false"
                app:summary="@string/notification_settings_summary">
            <intent android:action="android.settings.APP_NOTIFICATION_SETTINGS">
                <extra android:name="android.provider.extra.APP_PACKAGE" android:value="app.seamlessupdate.client" />
            </intent>
        </Preference>

    </PreferenceCategory>

    <Preference app:key="install_from_file"
            app:title="@string/install_from_file_title"
            app:summary="@string/install_from_file_summary"
            app:iconSpaceReserved="false" />

</PreferenceScreen>
